# DataStructures-Algorithms

./: .gitignore  CMakeLists.txt  README.md  run.sh
.cache/clangd/index/: main.cpp.C1121F801D0C1037.idx  node.cpp.E245DC6146B2C349.idx  node.h.F48DE765336681E7.idx
algorithms/: CMakeLists.txt
algorithms/src/: main.cpp
include/: node.h
src/: main.cpp  node.cpp
unix/: CMakeLists.txt
win32/: CMakeLists.txt
